src/test/deca/context/invalid/without_class/undefined_var2.deca
// Description:
//    Program with missing space between type and a variable
//
// Result:
//    UNDEFINED_VAR: Variable \(.\)\+ is undefined
//    line 8
{
    inty = 2; //missing space declaration
}